--- a/dmc/MainWindow.xaml
+++ b/dmc/MainWindow.xaml
@@ -5,8 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:dmc"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="350" Width="525"
+        AllowsTransparency="True"
+        Background="Transparent"
+        WindowStyle="None"
+        >
     <Grid>
-        
+        <Image Source="character.png"/>
     </Grid>
 </Window>
